--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,20 @@ apply plugin: 'kotlin-android-extensions'
 //custom
 apply plugin: 'koin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 android {
-    compileSdkVersion 29
+    compileSdkVersion 32
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.numesa.android.simpeldesa"
+        applicationId "com.prateek.nearwe"
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "BASE_URL", "\"https://jsonplaceholder.typicode.com\""
+
+        buildConfigField "String", "BASE_URL", "\"https://nearwe.azurewebsites.net\""
     }
 
     buildTypes {
@@ -49,6 +51,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.5'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
     //def koin_version = "2.1.5"
     def retrofit_version = '2.6.1'
     def navigatioan_version = '2.2.2'
@@ -108,5 +113,9 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
+    implementation "com.google.android.gms:play-services-location:20.0.0"
+    implementation 'com.github.BirjuVachhani:locus-android:3.0.1'
+
 
 }
