--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
         classpath "org.koin:koin-gradle-plugin:$koin_version"
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
         //mavenCentral()
     }
 }
