--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:20.0.0"
     implementation 'com.github.BirjuVachhani:locus-android:3.0.1'
     implementation 'info.androidhive:fontawesome:0.0.5'
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
 
 
 
