--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.navigation:navigation-fragment:$navigatioan_version"
     implementation "androidx.navigation:navigation-ui:$navigatioan_version"
@@ -122,6 +122,8 @@ dependencies {
     implementation 'info.androidhive:fontawesome:0.0.5'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
 
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
 
 }
