--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "BASE_URL", "\"https://nearwe.azurewebsites.net\""
+        buildConfigField "String", "BASE_URL", "\"https://nearwenode.azurewebsites.net\""
+
     }
 
     buildTypes {
@@ -129,5 +130,9 @@ dependencies {
     implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
     implementation 'gun0912.ted:tedbottompicker:2.0.1'
     implementation("com.robertlevonyan.components:PermissionsFlow:1.2.5")
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    implementation("androidx.core:core-splashscreen:1.0.0-rc01")
+
 
 }
