--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,14 @@
     <application
         android:name=".application.MainApp"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_foreground"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+       >
 
         <activity
+            android:theme="@style/Theme.App.Starting"
             android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -29,11 +30,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.home.HomeActivity"
             android:exported="true"
             android:label="@string/title_activity_home"
             android:screenOrientation="sensorPortrait"></activity>
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.comments.CommentsActivity"
             android:label="@string/title_activity_home"
             android:screenOrientation="sensorPortrait" />
