--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.5'
 
 
+
     //def koin_version = "2.1.5"
     def retrofit_version = '2.6.1'
     def navigatioan_version = '2.2.2'
@@ -130,10 +131,16 @@ dependencies {
     implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
     implementation 'gun0912.ted:tedbottompicker:2.0.1'
     implementation("com.robertlevonyan.components:PermissionsFlow:1.2.5")
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
 
     implementation 'com.github.Drjacky:ImagePicker:2.1.16'
     implementation("androidx.core:core-splashscreen:1.0.0-rc01")
+
+    implementation 'io.branch.sdk.android:library:5.+'
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    implementation 'androidx.browser:browser:1.4.0'
+
+
 
 
 }
