--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,12 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.5'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.5'
-
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.0'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.6'
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
 
     //def koin_version = "2.1.5"
